Updates presentation theme

--- a/tex/slides/presentation.tex
+++ b/tex/slides/presentation.tex
@@ -19,7 +19,7 @@
 %\usepackage{enumitem}
 %\usepackage{booktabs}  
 \documentclass{beamer} %
-\usetheme{CambridgeUS}
+\usetheme{metropolis}
 \usepackage[latin1]{inputenc}
 \usefonttheme{professionalfonts}
 \usepackage{times}
