--- a/tex/slides/presentation.tex
+++ b/tex/slides/presentation.tex
@@ -274,7 +274,19 @@
 \end{frame}
 
 \begin{frame}{Problem Overview - The Dual Problem}
-  Summary of the dual problem
+  The dual problem is given by
+  \vspace{1em}
+  \begin{equation}
+    \max_{\alpha \in \R^n} D(\alpha)
+  \end{equation}
+  where 
+  \begin{align*}
+    D(\alpha) &= \frac{1}{n}\sum_{i=1}^n -\phi^*_i(-\alpha_i) -
+    \frac{\lambda}{2}\Big|\Big|\frac{1}{\lambda n}\sum_{i=1}^n\alpha_i x_i\Big|\Big|^2\\
+    x_i & \in \R^d, \text{ for } i = 1, \dots, n\\
+    \alpha & \in \R^n\\
+    \phi^*_i(u) &= \max_z (zu - \phi_i(z))
+  \end{align*}
 \end{frame}
 %
 %\subsection{Related Work}
@@ -289,30 +301,37 @@
 
 \begin{frame}{What is SDCA?}
   \begin{itemize}
-    \item \textbf{SDCA} - randomly pick a coordinate axis, find update that best improves
-      the objectivei\vspace{1em}
-    \item \textbf{Distributed SDCA} - randomly pick $k$ coordinate axes, simultaneously
+    \item \textbf{SDCA} - randomly pick a coordinate axis of $\mathbf{\alpha}
+      \in \R^n$, find update that best improves
+      the objective\vspace{1em}
+    \item \textbf{Distributed SDCA} - randomly pick $k$ coordinate axes of
+      $\mathbf{\alpha} \in \R^n$, simultaneously
       find updates that best improve the objective (independently)
   \end{itemize}
+\end{frame}
+
+\begin{frame}[standout]
+  What if we ran SDCA on the GPU?
 \end{frame}
 
 \begin{frame}{Parallelizing SDCA}
   Two approaches:
 	\begin{itemize}
-	\item Naive approach: simply parallelize all tensor operations \pause
+    \item Naive approach: simply parallelize all tensor operations (e.g., dot
+      product, matrix-vector multiplication, etc.) \pause
   \item Better: mimic the distributed apporach by \cite{yang2013trading} on a GPU
 	\end{itemize}
 \end{frame}
 \section{Implementation}
 \begin{frame}{Main Points}
-  Two key areas of concern:
+  The key area of concern:
   \begin{itemize}
     \item Memory
       \begin{itemize}
-        \item Allocation
-        \item Communication
-      \end{itemize}\pause
-    \item Code Abstraction (wrappers)
+        \item Allocation \pause
+        \item Communication (via PCIE bus rather than network) \pause
+        \item How can we cognitive load of writing this code?
+      \end{itemize}
   \end{itemize}
 \end{frame}
 
@@ -325,19 +344,16 @@
 \end{frame}
 
 \begin{frame}[standout]
-  Can we do better?
-\end{frame}
-
-\begin{frame}[standout]
-  Can we do better?\\
+  Can we do better?\\ \pause
   Yes!
 \end{frame}
+
 
 \begin{frame}{Dealing with Memory Allocation}
   Better approach:
   \VerbatimInput[fontsize=\small]{allocImproved.txt}
   The use of static class pointers reduced the 200k allocations down to only
-  \textbf{3 memory allocations} which comprised only \textbf{0.03\%} compute
+  \textbf{3 memory allocations}, which comprised only \textbf{0.03\%} compute
     time ($\approx 180 \mu s$).
 \end{frame}
 
@@ -346,9 +362,10 @@
 \end{frame}
 
 \begin{frame}{Communication Costs}
-  Copying data to and from the GPU is the next most expensive operation
+  Copying data to and from the GPU is the next most expensive operation.
   \begin{itemize}
-    \item About 50\% of the compute time, or 768 ms (using the same toy dataset)
+    \item About 50\% of the compute time, or 768 ms (using the same toy dataset,
+      after we have fixed the memory allocation issue) \pause
     \item Mostly unnecessary!
   \end{itemize}
 \end{frame}
@@ -356,14 +373,15 @@
 \begin{frame}{Communication Costs}
   Consider the following algorithm using the GPU:
   \begin{algorithmic}[1]
-    \State $\Delta \omega \gets f(\mathbf{x}, \omega)$
-    \State $\omega \gets \omega + \Delta \omega$
+    \State $\Delta \omega_i \gets f(\mathbf{x}, \omega)$
+    \State $\omega_i \gets \omega_i + \Delta \omega_i$
   \end{algorithmic}
   
   To handle this efficiently we should:
   \begin{itemize}
+      \pause
     \item Reuse $\omega$ in step 2 since we already moved it to the GPU for step
-      1
+      1 \pause
     \item Perform step 2 on the GPU since the data is already there. No need to
       pull it off and then move it back to the GPU
   \end{itemize}
@@ -380,12 +398,7 @@
 \end{frame}
 
 \begin{frame}[standout]
-  What's the solution?
-\end{frame}
-
-\begin{frame}[standout]
-  What's the solution?\\
-  Wrappers!
+  How can we handle this complexity?
 \end{frame}
 
 \begin{frame}{Wrappers}
@@ -408,9 +421,12 @@
   We are still finalizing results. There is a lot of non-trivial structural code
   behind this.
   \begin{itemize}
-    \item Loading data
-    \item Algorithm
-    \item Algorithm performance tracking
+    \item Loading data \pause
+    \item CUDA can be challenging \pause
+    \item Algorithm \pause
+    \item Algorithm performance tracking \pause
+    \item Expect distributed SDCA to be the fastest, followed by CUDA
+      accelerated SDCA, followed by SDCA
   \end{itemize}
 \end{frame}
 
