--- a/tex/slides/presentation.tex
+++ b/tex/slides/presentation.tex
@@ -274,7 +274,7 @@
 \end{frame}
 
 \begin{frame}{Problem Overview - The Dual Problem}
-  The dual problem is given by
+  We consider the case when $g(w)=\frac{1}{2}\|w\|_2^2$, then the dual problem is given by
   \vspace{1em}
   \begin{equation}
     \max_{\alpha \in \R^n} D(\alpha)
