initial draft for report

--- a/tex/slides/presentation.tex
+++ b/tex/slides/presentation.tex
@@ -34,6 +34,8 @@
 \usetikzlibrary{arrows,shapes}   
 %\renewcommand{\algorithmicrequire}{\textbf{Input:}}
 %\renewcommand{\algorithmicensure}{\textbf{Output:}}
+\renewcommand{\algorithmicrequire}{\textbf{Input:}}
+\renewcommand{\algorithmicensure}{\textbf{Output:}}
 \def \S {\mathbf{S}}
 \def \A {\mathcal{A}}
 \def \X {\mathcal{X}}
